--- a/coreUI/src/main/res/values/strings.xml
+++ b/coreUI/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">YS Music Player</string>
+    <string name="app_name">YES Music Player</string>
     <string name="sunday">sun</string>
     <string name="monday">mon</string>
     <string name="tuesday">tue</string>
@@ -15,7 +15,7 @@
     <string name="hour">h</string>
     <string name="minute">m</string>
     <string name="left">left</string>
-    <string name="widget_name">YS Music Player</string>
+    <string name="widget_name">YES Music Player</string>
     <string name="loudness_enhancer">LOUDNESS ENHANCER</string>
     <string name="song">SONG</string>
     <string name="duration">DURATION</string>
