--- a/coreUI/src/main/res/values/strings.xml
+++ b/coreUI/src/main/res/values/strings.xml
@@ -51,4 +51,10 @@
     <string name="newPlaylist">New playlist</string>
     <string name="error">Error</string>
 
+    <string name="tracks">tracks</string>
+    <string name="artists">artists</string>
+    <string name="albums">albums</string>
+    <string name="folder">folder</string>
+    <string name="genres">genres</string>
+
 </resources>
