dialog in progress 17.11.2022

--- a/coreUI/src/main/res/values-ru/strings.xml
+++ b/coreUI/src/main/res/values-ru/strings.xml
@@ -54,6 +54,7 @@
     <string name="albums">альбомы</string>
     <string name="folder">каталоги</string>
     <string name="genres">жанры</string>
+    <string name="categories">категории</string>
 
 
 </resources>
