fragment test with fake viewModel coroutines passed 06.05.2023

--- a/coreUI/src/main/res/values-ru/strings.xml
+++ b/coreUI/src/main/res/values-ru/strings.xml
@@ -56,5 +56,6 @@
     <string name="genres">жанры</string>
     <string name="categories">категории</string>
 
+    <string name="UnknownException">неизвестная ошибка</string>
 
 </resources>
