--- a/coreUI/src/main/res/values/strings.xml
+++ b/coreUI/src/main/res/values/strings.xml
@@ -58,5 +58,7 @@
     <string name="genres">genres</string>
     <string name="categories">categories</string>
     <string name="UnknownException">Unknown Exception</string>
+    <string name="notification_channel">Now Playing</string>
+    <string name="notification_channel_description">Shows what music is currently playing</string>
 
 </resources>
