--- a/coreUI/src/main/res/values/strings.xml
+++ b/coreUI/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="selectPlaylist">select playlist to load</string>
     <string name="InternalStorage">Internal Storage</string>
     <string name="SDCard">SD Card</string>
-    <string name="buffering">buffering...</string>
+    <string name="buffering">buffering</string>
     <string name="networkUnavailable">network unavailable</string>
     <string name="pleaseRateThisApp">Please take a moment to rate this app</string>
     <string name="alreadyRated">already rated</string>
