--- a/coreUI/src/main/res/values-ru/strings.xml
+++ b/coreUI/src/main/res/values-ru/strings.xml
@@ -57,6 +57,7 @@
     <string name="categories">категории</string>
 
     <string name="UnknownException">неизвестная ошибка</string>
+    <string name="PlaylistsSizeLimit">должен быть хотябы один плейлист</string>
     <string name="notification_channel">Now Playing</string>
     <string name="notification_channel_description">Shows what music is currently playing</string>
 
