--- a/coreUI/src/main/res/values/strings.xml
+++ b/coreUI/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="friday">fri</string>
     <string name="saturday">sat</string>
 
-    <string name="label">Label</string>
+    <string name="label">Music</string>
 
     <string name="repeat">REPEAT</string>
     <string name="hour">h</string>
